[gd_scene load_steps=7 format=3 uid="uid://chkbjvbmhr6p2"]

[ext_resource type="Script" uid="uid://1jgoxty0r1xg" path="res://Scripts/invanimal_info.gd" id="1_fqat5"]
[ext_resource type="Texture2D" uid="uid://ca2bv2gm76q2v" path="res://Textures/Inventaire/grey_inlay.png" id="2_1dn3g"]
[ext_resource type="Shader" uid="uid://c7r3th281ihh2" path="res://Inventory/inv_animals.gdshader" id="2_sukme"]
[ext_resource type="Texture2D" uid="uid://bd16is5v8ma4p" path="res://Textures/Animals/dragon_texture.png" id="3_jhio5"]
[ext_resource type="Texture2D" uid="uid://bueqr4wj8dprb" path="res://Textures/Inventaire/blue.png" id="4_o5qgg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uhj1s"]
shader = ExtResource("2_sukme")
shader_parameter/scroll_speed = 1.0
shader_parameter/angle_degrees = 45.0
shader_parameter/repeat_x = 0.5
shader_parameter/repeat_y = 0.5
shader_parameter/row_offset = 2.5
shader_parameter/texture_to_scroll = ExtResource("2_1dn3g")

[node name="Inv_Animal_Info" type="Control"]
layout_mode = 3
anchor_right = 0.272
anchor_bottom = 0.353
offset_right = -0.240051
offset_bottom = -0.240021
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fqat5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 12

[node name="BackgroundTiles" type="TextureRect" parent="CanvasLayer"]
texture_filter = 1
material = SubResource("ShaderMaterial_uhj1s")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -500.0
offset_right = 500.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_o5qgg")
stretch_mode = 1

[node name="Name" type="Label" parent="CanvasLayer"]
texture_filter = 1
offset_left = 460.0
offset_top = 560.0
offset_right = 1460.0
offset_bottom = 689.0
theme_override_font_sizes/font_size = 128
text = "NAME"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Description" type="Label" parent="CanvasLayer"]
texture_filter = 1
offset_left = 472.0
offset_top = 680.0
offset_right = 1448.0
offset_bottom = 832.0
theme_override_constants/line_spacing = -16
theme_override_font_sizes/font_size = 64
text = "Description"
horizontal_alignment = 3
autowrap_mode = 3
uppercase = true

[node name="Animal" type="Sprite2D" parent="CanvasLayer"]
texture_filter = 1
position = Vector2(952, 328)
scale = Vector2(16, 16)
texture = ExtResource("3_jhio5")

[node name="HPMax" type="Label" parent="CanvasLayer"]
texture_filter = 1
offset_left = 472.0
offset_top = 840.0
offset_right = 1440.0
offset_bottom = 887.0
theme_override_font_sizes/font_size = 46
text = "HPMAX"
uppercase = true

[node name="Speed" type="Label" parent="CanvasLayer"]
texture_filter = 1
offset_left = 472.0
offset_top = 887.0
offset_right = 1440.0
offset_bottom = 934.0
theme_override_font_sizes/font_size = 46
text = "SPEED
"
uppercase = true

[node name="Element1" type="Label" parent="CanvasLayer"]
texture_filter = 1
offset_left = 472.0
offset_top = 936.0
offset_right = 1440.0
offset_bottom = 983.0
theme_override_font_sizes/font_size = 46
text = "Element 1 :"
uppercase = true

[node name="Element2" type="Label" parent="CanvasLayer"]
texture_filter = 1
offset_left = 472.0
offset_top = 984.0
offset_right = 1440.0
offset_bottom = 1031.0
theme_override_font_sizes/font_size = 46
text = "Element 2 :"
uppercase = true

[node name="x" type="Button" parent="CanvasLayer" groups=["buttons"]]
texture_filter = 1
offset_left = 1472.0
offset_top = 40.0
offset_right = 1544.0
offset_bottom = 113.0
theme_override_font_sizes/font_size = 64
text = "X"

[connection signal="pressed" from="CanvasLayer/x" to="." method="_on_x_pressed"]
